replace Rnw with minted

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1,54 +1,4 @@
-\documentclass[12pt, a4paper]{article}\usepackage[]{graphicx}\usepackage[]{color}
-%% maxwidth is the original width if it is less than linewidth
-%% otherwise use linewidth (to make sure the graphics do not exceed the margin)
-\makeatletter
-\def\maxwidth{ %
-  \ifdim\Gin@nat@width>\linewidth
-    \linewidth
-  \else
-    \Gin@nat@width
-  \fi
-}
-\makeatother
-
-\definecolor{fgcolor}{rgb}{0.345, 0.345, 0.345}
-\newcommand{\hlnum}[1]{\textcolor[rgb]{0.686,0.059,0.569}{#1}}%
-\newcommand{\hlstr}[1]{\textcolor[rgb]{0.192,0.494,0.8}{#1}}%
-\newcommand{\hlcom}[1]{\textcolor[rgb]{0.678,0.584,0.686}{\textit{#1}}}%
-\newcommand{\hlopt}[1]{\textcolor[rgb]{0,0,0}{#1}}%
-\newcommand{\hlstd}[1]{\textcolor[rgb]{0.345,0.345,0.345}{#1}}%
-\newcommand{\hlkwa}[1]{\textcolor[rgb]{0.161,0.373,0.58}{\textbf{#1}}}%
-\newcommand{\hlkwb}[1]{\textcolor[rgb]{0.69,0.353,0.396}{#1}}%
-\newcommand{\hlkwc}[1]{\textcolor[rgb]{0.333,0.667,0.333}{#1}}%
-\newcommand{\hlkwd}[1]{\textcolor[rgb]{0.737,0.353,0.396}{\textbf{#1}}}%
-\let\hlipl\hlkwb
-
-\usepackage{framed}
-\makeatletter
-\newenvironment{kframe}{%
- \def\at@end@of@kframe{}%
- \ifinner\ifhmode%
-  \def\at@end@of@kframe{\end{minipage}}%
-  \begin{minipage}{\columnwidth}%
- \fi\fi%
- \def\FrameCommand##1{\hskip\@totalleftmargin \hskip-\fboxsep
- \colorbox{shadecolor}{##1}\hskip-\fboxsep
-     % There is no \\@totalrightmargin, so:
-     \hskip-\linewidth \hskip-\@totalleftmargin \hskip\columnwidth}%
- \MakeFramed {\advance\hsize-\width
-   \@totalleftmargin\z@ \linewidth\hsize
-   \@setminipage}}%
- {\par\unskip\endMakeFramed%
- \at@end@of@kframe}
-\makeatother
-
-\definecolor{shadecolor}{rgb}{.97, .97, .97}
-\definecolor{messagecolor}{rgb}{0, 0, 0}
-\definecolor{warningcolor}{rgb}{1, 0, 1}
-\definecolor{errorcolor}{rgb}{1, 0, 0}
-\newenvironment{knitrout}{}{} % an empty environment to be redefined in TeX
-
-\usepackage{alltt}
+\documentclass[12pt, a4paper]{article}
 
 % If you can't see cyrillic letters in R-studio choose
 % File-Reopen with encoding
@@ -59,7 +9,7 @@
 \input{emetrix_preamble}
 
 
-
+\usepackage{minted}
 
 \usepackage[bibencoding = auto, backend = biber,
 sorting = none]{biblatex}
@@ -95,13 +45,14 @@ sorting = none]{biblatex}
 % можно изменить далее по ходу
 \Opensolutionfile{solution_file}[all_solutions]
 % в квадратных скобках фактическое имя файла
-\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
+
+
+
 \begin{document}
 
 % \maketitle % ставим сюда название, автора и время создания
 
 \section{Вперёд, в рукопашную!}
-
 
 
 Минитеория:
@@ -3569,15 +3520,15 @@ $C_{20}^2\cdot 18$.
     \item Каким соотношением связаны $F_{n}$, $F_{n-1}$ и $F_{n-2}$?
     \item Пусть для удобства $F_0=0$ и $F_1=1$. Найдите производящую функцию для количества пар кроликов.
     \item Используя хороший софт, поделите 1 на 999999999999999999999998999999999999999999999999. Здесь 23 девятки, восьмёрка и потом 24 девятки. Почему мы видим последовательность чисел Фибонначи? Например, можно поделить в julia установив высокую точность:
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlkwd{setprecistion}\hlstd{(BigFloat,} \hlnum{10000}\hlstd{)}
-\hlnum{1} \hlopt{/} \hlnum{999999999999999999999998999999999999999999999999}
-\end{alltt}
-\end{kframe}
-\end{knitrout}
-    \item Разложите найденную функцию в сумму двух дробей и, вспомнив формулу для геометрической прогрессии, найдите явную формулу для чисел Фибоначчи.
+\begin{minted}[mathescape,
+               linenos,
+               numbersep=5pt,
+               frame=lines,
+               framesep=2mm]{julia}
+setprecistion(BigFloat, 10000)
+1 / 999999999999999999999998999999999999999999999999
+\end{minted}   
+ \item Разложите найденную функцию в сумму двух дробей и, вспомнив формулу для геометрической прогрессии, найдите явную формулу для чисел Фибоначчи.
   \end{enumerate}
 \begin{sol}
 $F_n = F_{n-1} + F_{n-2}$.
